objects/Quote.object
<CustomObject>
    <fields>
        <fullName>CommentaireDevis__c</fullName>
        <formula>Opportunity.Commentaire_devis__c</formula>
        <label>Commentaire devis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commentaire_devisOLD__c</fullName>
        <label>Commentaire devis</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conditions_de_restauration__c</fullName>
        <formula>TEXT(Opportunity.Conditions_de_restauration__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conditions de restauration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_de_d_but__c</fullName>
        <formula>Opportunity.Date_de_d_but__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date de début</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_fin__c</fullName>
        <formula>Opportunity.Date_fin_formation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date de fin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_fin_old__c</fullName>
        <description>Définit la date de fin du devis</description>
        <label>Date de fin_old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_formation__c</fullName>
        <formula>Opportunity.Information_session__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date de formation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_debut_old__c</fullName>
        <description>Définit la date de début du devis</description>
        <label>Date de début_old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Destinataire__c</fullName>
        <formula>Text(Opportunity.Contact_central__r.Salutation)&amp;&quot; &quot;&amp;Opportunity.Contact_central__r.FirstName&amp;&quot; &quot;&amp;Opportunity.Contact_central__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destinataire</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_devis__c</fullName>
        <formula>IF(Discount &gt;0, Discount ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remise</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Email_Professionnel_DEVIS__c</fullName>
        <formula>Opportunity.Contact_central__r.Email_de_repli__c</formula>
        <label>Email Professionnel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entreprise__c</fullName>
        <description>Entreprise déclarée de la liste contact</description>
        <label>Entreprise</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entreprise_d_clar_e__c</fullName>
        <formula>Opportunity.Contact_central__r.Entreprise_d_clar_e__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entreprise déclarée</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lieu__c</fullName>
        <description>Définit lieu de la formation</description>
        <label>Lieu_OLD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lieu_de_formation__c</fullName>
        <formula>Opportunity.Lieu_de_formation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lieu de formation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_de_jours__c</fullName>
        <formula>Opportunity.Nombre_de_jours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_dheures__c</fullName>
        <formula>Opportunity.Nombre_d_heures__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre d&apos;heures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_heures__c</fullName>
        <label>Nombre d&apos;heures_OLD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours__c</fullName>
        <label>Nombre de jours_OLD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Societe__c</fullName>
        <formula>Opportunity.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Société</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_l_phone_DEVIS__c</fullName>
        <formula>Opportunity.Contact_central__r.Phone</formula>
        <label>Téléphone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Votre_formation__c</fullName>
        <formula>Opportunity.Votre_formation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Votre formation</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>